Fixed POs message and items visibility when adding a new one

--- a/assets/css/atum-orders.css
+++ b/assets/css/atum-orders.css
@@ -4018,7 +4018,7 @@ ul.atum_order_notes li .note_content::after {
   display: none;
 }
 
-.items-blocker.unblocked, .allow-multiple-suppliers .items-blocker {
+.items-blocker.unblocked {
   display: none;
 }
 
